k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imagomortis
  labels:
    app.kubernetes.io/name: imagomortis
    app.kubernetes.io/part-of: imagomortis
